K8s/DiscordClone/files-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filesserver-deployment
  namespace: discord-backend
spec:
  selector:
    matchLabels:
      app: files-server
  replicas: 2
  template:
    metadata:
      labels:
        app: files-server
    spec:
      serviceAccountName: discord-backend-sa
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "discord-clone-mongodb-atlas-secrets"
      containers:
        - name: filesserver
          image: 207986101045.dkr.ecr.ap-southeast-1.amazonaws.com/discordclone-filesserver:eks
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /file/healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
