K8s/DiscordClone/socket-io-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socketio-deployment
  namespace: discord-backend
spec:
  selector:
    matchLabels:
      app: socketio-server
  replicas: 2
  template:
    metadata:
      labels:
        app: socketio-server
    spec:
      serviceAccountName: discord-backend-sa
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "discord-clone-mongodb-atlas-secrets"
      containers:
        - name: socketio
          image: 207986101045.dkr.ecr.ap-southeast-1.amazonaws.com/discordclone-socketio:eks
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /chat/healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
