K8s/DiscordClone/socketio-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: socketio-server-statefulset
  namespace: discord-backend
spec:
  selector:
    matchLabels:
      app: socketio-server
  serviceName: discordclone-socketio-svc
  replicas: 2
  template:
    metadata:
      labels:
        app: socketio-server
    spec:
      serviceAccountName: discord-backend-sa
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "discord-clone-mongodb-atlas-secrets"
      containers:
        - name: socketio-server
          image: 207986101045.dkr.ecr.ap-southeast-1.amazonaws.com/discordclone-socketio:sticky
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: socketio
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /chat/healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
