K8s/DiscordClone/discord-clone-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-backend-ingress
  namespace: discord-backend
  labels:
    name: discord-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  tls:
    - hosts:
        - api.frostdevops.com
      secretName: quickstart-example-tls
  rules:
    - host: api.frostdevops.com
      http:
        paths:
          - pathType: Prefix
            path: "/socket.io"
            backend:
              service:
                name: discordclone-socketio-svc
                port:
                  number: 3000
          - pathType: Prefix
            path: "/chat"
            backend:
              service:
                name: discordclone-socketio-svc
                port:
                  number: 3000
          - pathType: Prefix
            path: "/graphql"
            backend:
              service:
                name: discordclone-graphql-svc
                port:
                  number: 4000
          - pathType: Prefix
            path: "/file"
            backend:
              service:
                name: discordclone-files-svc
                port:
                  number: 8000
